--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: advisory-node
     env: go
     plan: starter  # Can upgrade to standard/pro for more resources
-    buildCommand: go build -o advisory-node main_db.go
+    buildCommand: go build -o advisory-node main.go
     startCommand: ./advisory-node
     envVars:
       - key: PORT
